Added Google API key

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="https://f.vimeocdn.com/js/froogaloop2.min.js"></script>
   <script src="assets/js/jquery.fitvids.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6UPY_RLPY9BWc-9jxgB4Cp1uWw5ttdwg&v=3.exp&amp;sensor=false"></script>
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
