Projects section complete

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<li><a href="#about">About</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#skills">Skills</a></li>
-						<li><a href="#works">Works</a></li>
+						<li><a href="#works">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -416,20 +416,21 @@
             <li><a data-group="design">Design</a></li>
             <li><a data-group="web">Web</a></li>
             <li><a data-group="aswwu">ASWWU</a></li>
-            <li><a data-group="identety">Identity</a></li>
+            <li><a data-group="data">Data Analysis</a></li>
         </ul>
 
         <div class="row">
           <div id="grid">
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "interface"]'>
+
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design", "web", "aswwu"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
                     <a class="image-link" href="assets/images/works/atlas.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a href="https://aswwu.com/atlas"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/atlas.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/atlas.jpg" alt="image">
                   <div class="portfolio-info">
                     <h3>The Atlas</h3>
                   </div><!-- /.portfolio-info -->
@@ -438,111 +439,118 @@
             </div><!-- /.portfolio-item -->
 
 
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "web"]'>
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "aswwu", "web"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-1.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/jobs.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://github.com/ASWWU-Web/jobs"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/jobs.png" alt="image">
+                  <img src="assets/images/works/thumbnails/jobs.jpg" alt="image">
                   <div class="portfolio-info">
                     <h3>ASWWU Jobs</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "interface"]'>
+
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design", "aswwu", "web"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-3.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/homepage.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://aswwu.com/dev"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-3.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/homepage.jpg" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>New ASWWU Site</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
+
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "aswwu", "web"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-4.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/aswwu.com.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://aswwu.com"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-4.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/aswwu.com.jpg" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>ASWWU.com</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
+
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "data"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-5.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/ml.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://github.com/asteroidice/ml-titanic"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-5.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/ml.jpg" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>Machine Learning</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
+
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "data", "web"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-6.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/serviceday.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://github.com/ASWWU-Web/service-day"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-6.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/serviceday.jpg" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>Service Day</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "web"]'>
+
+						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "data", "aswwu"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-7.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/python_server.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://github.com/ASWWU-Web/python_server"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-7.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/python_server.jpg" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>Python Server</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design"]'>
+
+						<div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design", "aswwu", "data", "web"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-8.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/mask.jpg"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://github.com/ASWWU-Web/mask"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-8.jpg" alt="image">
+                  <img src="assets/images/works/thumbnails/mask.jpg" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>New Mask</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
+
           </div><!-- /#grid -->
         </div><!-- /.row -->
       </div><!-- /.container -->
