--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<!-- Home Section -->
 	<section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
 		<div class="intro">
-			<div class="intro-sub">I am Ryan Rabello</div>
+			<div class="intro-sub">Ryan Rabello</div>
 			<h1>Computer <span>Engineer</span></h1>
 			<p>WARNING: Dangerous if armed with a laptop, oscilloscope or soldering iron.</p>
 
@@ -83,7 +83,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="I am Ryan"></a>
+					<a class="navbar-brand" href="#home">
+						<div style="padding: 5px;font-size: 20px;">
+								<span style="color:#52b3d9;">Ryan</span> Rabello
+						</div>
+					</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
@@ -116,7 +120,7 @@
               <ul>
                 <li><strong>Name:</strong> Ryan Rabello</li>
                 <li><strong>Location:</strong> Glendale, CA</li>
-                <li><strong>Phone:</strong> (818) 220-4046</li>
+                <li><strong>Phone:</strong> <a href="tel:8182204046">(818) 220-4046</a></li>
                 <li><strong>Email:</strong> <a href="mailto:ryan.s.rabello@gmail.com">ryan.s.rabello@gmail.com</a></li>
               </ul>
             </div>
@@ -144,7 +148,7 @@
             </div>
 
             <div class="download-button">
-              <a class="btn btn-info btn-lg" href="#contact"><i class="fa fa-paper-plane"></i>Send me message</a>
+              <a class="btn btn-info btn-lg" href="mailto:ryan.s.rabello@gmail.com"><i class="fa fa-paper-plane"></i>Send me message</a>
               <a class="btn btn-primary btn-lg" href="https://docs.google.com/document/d/1KaT4bNacEbw2alW3lyxOed1EluA7LqKSfsDPdxz2dvY/export?format=pdf"><i class="fa fa-download"></i>download my resume</a>
             </div>
           </div>
@@ -566,23 +570,23 @@
               <div class="count-wrap">
                 <div class="col-sm-3 col-xs-6">
                   <i class="fa fa-flask"></i>
-                  <h3 class="timer">7</h3>
+                  <h3 class="timer">3</h3>
                   <p>Years of Experience</p>
                 </div>
                 <div class="col-sm-3 col-xs-6">
-                  <i class="fa fa-thumbs-up"></i>
-                  <h3 class="timer">651</h3>
-                  <p>Projects Done</p>
+                  <i class="fa fa-code-fork"></i>
+                  <h3 class="timer">228</h3>
+                  <p>Contributions</p>
                 </div>
                 <div class="col-sm-3 col-xs-6">
                   <i class="fa fa-users"></i>
-                  <h3 class="timer">251</h3>
-                  <p>Happy Clients</p>
+                  <h3 class="timer">1657</h3>
+                  <p>Users</p>
                 </div>
                 <div class="col-sm-3 col-xs-6">
                   <i class="fa fa-trophy"></i>
-                  <h3 class="timer">5</h3>
-                  <p>Awards Won</p>
+                  <h3 class="timer">8</h3>
+                  <p>Academic Awards</p>
                 </div>
               </div><!-- /count-wrap -->
             </div><!-- /.col-md-12 -->
@@ -595,52 +599,33 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section section-padding">
       <div class="container">
-        <h2 class="section-title wow fadeInUp">Get in touch</h2>
+        <h2 class="section-title wow fadeInUp">Contact</h2>
 
         <div class="row">
-          <div class="col-md-6">
-            <div class="contact-form">
-              <strong>Send me a message</strong>
-              <form name="contact-form" method="post" action="assets/php/sendemail.php">
-                <div class="form-group">
-                  <label for="InputName1">Name</label>
-                  <input type="text" name="name" class="form-control" id="InputName1" required="">
-                </div>
-                <div class="form-group">
-                  <label for="InputEmail1">Email</label>
-                  <input type="email" name="email" class="form-control" id="InputEmail1" required="">
-                </div>
-                <div class="form-group">
-                  <label for="InputSubject">Subject</label>
-                  <input type="text" name="subject" class="form-control" id="InputSubject">
-                </div>
-                <div class="form-group">
-                  <label for="InputTextarea">Message</label>
-                  <textarea name="message" class="form-control" id="InputTextarea" rows="5" required=""></textarea>
-                </div>
 
-                <button type="submit" name="submit" class="btn btn-primary">Send Message</button>
-              </form>
-            </div>
-          </div><!-- /.col-md-6 -->
-
-          <div class="col-md-6">
+          <div class="col-md-8 col-md-offset-2">
             <div class="row center-xs">
-              <div class="col-sm-6">
+              <div class="col-sm-4">
                 <i class="fa fa-map-marker"></i>
                 <address>
-                  <strong>Address/Street</strong>
-                  239/2 Awesome Street,<br>
-                  Boston, USA<br>
+                  <strong>Location</strong>
+                  Glendale, CA
                 </address>
               </div>
 
-              <div class="col-sm-6">
+              <div class="col-sm-4">
                 <i class="fa fa-mobile"></i>
                 <div class="contact-number">
                   <strong>Phone Number</strong>
-                  (001) 0123 111222<br>
-                  (001) 0123 333444
+                  <a href="tel:8182204046">(818) 220-4046</a>
+                </div>
+              </div>
+
+							<div class="col-sm-4">
+                <i class="fa fa-envelope"></i>
+                <div class="contact-number">
+                  <strong>Email</strong>
+                  <a href="mailto:ryan.s.rabello@gmail.com">ryan.s.rabello@gmail.com</a>
                 </div>
               </div>
             </div>
