Updated hashtag urls

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<li><a href="#about">About</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#skills">Skills</a></li>
-						<li><a href="#works">Projects</a></li>
+						<li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -411,7 +411,7 @@
 
 
     <!-- Works Section -->
-    <section id="works" class="works-section section-padding">
+    <section id="projects" class="works-section section-padding">
       <div class="container">
         <h2 class="section-title wow fadeInUp">Projects</h2>
 
