Updated images and other misc. things. - Added and removed images. - Changed droppage - Added completion date for education - Changed the preloader

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 	<!-- Home Section -->
 	<section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
 		<div class="intro">
-			<div class="intro-sub">Ryan Rabello</div>
-			<h1>Computer <span>Engineer</span></h1>
+
+			<h1>Ryan <span>Rabello</span></h1>
+			<!-- <div class="intro-sub">a Computer Engineer</div> -->
 			<p>WARNING: Dangerous if armed with a laptop, oscilloscope or soldering iron.</p>
 
       <div class="social-icons">
@@ -187,7 +188,7 @@
                         <ul class="timeline">
                             <li>
                                 <div class="posted-date">
-                                    <span class="month text-uppercase">2014 - Present</span>
+                                    <span class="month text-uppercase">2014 - 2018</span>
                                 </div><!-- /posted-date -->
 
                                 <div class="timeline-panel wow fadeInUp">
