Fixed spelling mistake -__-

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>At Walla Walla University I gained a passion for learning. Here I get to work on intriguing projects that challenge me. The mental agility required of me has truly changed my perseption of information.</p>
+                                            <p>At Walla Walla University I gained a passion for learning. Here I get to work on intriguing projects that challenge me. The mental agility required of me has truly changed my perception of information.</p>
                                         </div><!-- /timeline-body -->
                                     </div> <!-- /timeline-content -->
                                 </div><!-- /timeline-panel -->
