--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="download-button">
-              <a class="btn btn-info btn-lg" href="mailto:ryan.s.rabello@gmail.com"><i class="fa fa-paper-plane"></i>Send me message</a>
+              <a class="btn btn-info btn-lg" href="mailto:ryan.s.rabello@gmail.com"><i class="fa fa-paper-plane"></i>Message me</a>
               <a class="btn btn-primary btn-lg" href="https://docs.google.com/document/d/1KaT4bNacEbw2alW3lyxOed1EluA7LqKSfsDPdxz2dvY/export?format=pdf"><i class="fa fa-download"></i>download my resume</a>
             </div>
           </div>
