--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Responsive Personal Portfolio vCard Template">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<meta name="author" content="Ahmed Faruk">
+	
 
 	<title>IAMX – Responsive Personal Portfolio vCard Template</title>
 
@@ -52,7 +54,7 @@
 		<div class="intro">
 			<div class="intro-sub">I am X</div>
 			<h1>Creative <span>Designer</span></h1>
-			<p>I am a fully professional freelance creative User Interface Designer &amp; Developer<br> Involving with latest web designing and technologies is a great <br> feel free to contact creative.</p>
+			<p>I am a fully professional freelancer and i make creative User Interface Designe &amp; <br>Which Involving with latest web designing and technologies  <br> feel free to contact me.</p>
 
       <div class="social-icons">
         <ul class="list-inline">
